#19 Deploy to Azure

--- a/frontend/ERNI.BerlinSpartans.Hackathon.Frontend/ERNI.BerlinSpartans.Hackathon.Frontend/ERNI.BerlinSpartans.Hackathon.Frontend.csproj
+++ b/frontend/ERNI.BerlinSpartans.Hackathon.Frontend/ERNI.BerlinSpartans.Hackathon.Frontend/ERNI.BerlinSpartans.Hackathon.Frontend.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ERNI.BerlinSpartans.Hackathon.Services\ERNI.BerlinSpartans.Hackathon.Services.csproj" />
+  </ItemGroup>
+
 </Project>
