#17 Add SignalR for communication between Frontend and Backend

--- a/frontend/ERNI.BerlinSpartans.Hackathon.Frontend/ERNI.BerlinSpartans.Hackathon.Frontend/appsettings.json
+++ b/frontend/ERNI.BerlinSpartans.Hackathon.Frontend/ERNI.BerlinSpartans.Hackathon.Frontend/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "MQTT": {
+    "BrokerAddress": "10.213.90.68",
+    "Port": 1883,
+    "IdleTimeoutInMinutes": 1
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
