--- a/frontend/ERNI.BerlinSpartans.Hackathon.Frontend/ERNI.BerlinSpartans.Hackathon.Frontend/appsettings.json
+++ b/frontend/ERNI.BerlinSpartans.Hackathon.Frontend/ERNI.BerlinSpartans.Hackathon.Frontend/appsettings.json
@@ -1,6 +1,6 @@
 {
   "MQTT": {
-    "BrokerAddress": "10.213.90.68",
+    "BrokerAddress": "broker.hivemq.com",
     "Port": 1883,
     "IdleTimeoutInMinutes": 1
   },
